syntax = "proto3";

package llama;

service LlamaService {
  rpc GenerateText(GenerateTextRequest) returns (GenerateTextResponse) {}
}

message GenerateTextRequest {
  string prompt = 1;
  int32 max_tokens = 2;
  float temperature = 3;
}

message GenerateTextResponse {
  string text = 1;
}